--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ADGV" version="0.1.0.10" targetFramework="net452" />
+  <package id="Costura.Fody" version="3.3.3" targetFramework="net45" />
   <package id="ExcelDataReader" version="3.4.2" targetFramework="net452" />
   <package id="ExcelDataReader.DataSet" version="3.4.2" targetFramework="net452" />
+  <package id="Fody" version="4.2.1" targetFramework="net45" developmentDependency="true" />
   <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net452" />
 </packages>
